test_regress/t/t_langext_1_bad.out
%Error: t/t_langext_1.v:44:7: syntax error, unexpected IDENTIFIER-for-type
   44 |       genvar i;
      |       ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_langext_1.v:51:1: syntax error, unexpected endmodule, expecting '('
   51 | endmodule
      | ^~~~~~~~~
%Error: Cannot continue
        ... This fatal error may be caused by the earlier error(s); resolve those first.
